--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,12 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+
     "version": "0.2.0",
     "configurations": [
         {
             "type": "java",
             "name": "Launch ProgrammingChallenge_01",
             "request": "launch",
-            "mainClass": "programmingchallenge_01.ProgrammingChallenge_01",
+            "mainClass": "programmingchallenge_01",
             "projectName": "quizzChallange_b70e0f60"
         },
         {
@@ -28,7 +26,7 @@
             "type": "java",
             "name": "Launch ProgrammingChallenge_01",
             "request": "launch",
-            "mainClass": "programmingchallenge_01.ProgrammingChallenge_01",
+            "mainClass": "programmingchallenge_01",
             "projectName": "quizzChallange_58937e42"
         }
     ]
